--- a/app.json
+++ b/app.json
@@ -16,8 +16,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/dokkumeme/dokkumemebot1",
-    "repository": "https://github.com/dokkumeme/dokkumemebot1",
+    "website": "https://github.com/dokkumeme/dokkubot",
+    "repository": "https://github.com/dokkumeme/dokkubot",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
@@ -65,7 +65,7 @@
         },
         "COLLECTION_NAME": {
             "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
-            "value": "Telegram_files",
+            "value": "Dokku_files",
             "required": false
         }
     },
