--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,26 @@
-# .github/workflows/ci.yml
-
 on:
   pull_request:
   push:
     branches: [main]
 
 jobs:
-  ci:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-node@v4.0.2
-      - name: Test
-        run: |
-          npm install
-          npm run test
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Deploy
-        # Only run this step if the branch is main
-        if: github.ref == 'refs/heads/main'
-        env:
-          deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
-        run: |
-          curl "$deploy_url"
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+
+    - name: Install dependencies
+      working-directory: ./dokkubot
+      run: npm install
+
+    - name: Deploy to Render
+      env:
+        deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+      run: |
+        curl "$deploy_url"
