--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,11 +15,11 @@ jobs:
       with:
         node-version: '14'
 
+    - name: List entire directory structure
+      run: ls -alR
+
     - name: List files in root directory
       run: ls -al
-
-    - name: List files in dokkubot directory
-      run: ls -al ./dokkubot
 
     - name: Install dependencies
       working-directory: ./dokkubot
