--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,30 @@
 services:
-  # A Docker web service
-  - type: web
-    name: DQ-The-File-Donor
-    env: python
-    startCommand: python3 bot.py
-    buildCommand: pip3 install -U -r requirements.txt
-    repo: https://github.com/dokkumeme/dokkubot.git # optional
-    region: oregon # optional (defaults to oregon)
-    plan: free # optional (defaults to starter)
-    branch: main # optional (defaults to master)
-    numInstances: 1 # optional (defaults to 1)
-    healthCheckPath: /
-
-#End of yaml
+- type: web
+  name: latestdokkubot
+  runtime: python
+  repo: https://github.com/dokkumeme/dokkubot
+  plan: free
+  envVars:
+  - key: PYTHON_VERSION
+    sync: false
+  - key: LOG_CHANNEL
+    sync: false
+  - key: DATABASE_URI
+    sync: false
+  - key: DATABASE_NAME
+    sync: false
+  - key: CHANNELS
+    sync: false
+  - key: API_HASH
+    sync: false
+  - key: BOT_TOKEN
+    sync: false
+  - key: API_ID
+    sync: false
+  - key: ADMINS
+    sync: false
+  region: oregon
+  buildCommand: pip install -r requirements.txt
+  startCommand: gunicorn app:app & python3 bot.py
+  healthCheckPath: /health
+version: "1"
