--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,13 +3,14 @@ version: 0.2
 phases:
   install:
     commands:
+      - echo "Upgrading pip..."
+      - pip install --upgrade pip
       - echo "Installing dependencies..."
       - pip install -r requirements.txt -t .
 
   pre_build:
     commands:
       - echo "Running pre-build steps..."
-      # Optional: Add any pre-build commands, e.g., running tests
 
   build:
     commands:
