--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,10 +3,13 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo "Upgrading pip..."
+      - echo "Upgrading pip to the latest version..."
       - pip install --upgrade pip
+      - echo "Creating virtual environment..."
+      - python -m venv venv
+      - source venv/bin/activate
       - echo "Installing dependencies..."
-      - pip install -r requirements.txt -t .
+      - pip install -r requirements.txt --verbose
 
   pre_build:
     commands:
