--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,5 @@ marshmallow==3.14.1
 umongo==3.0.1
 requests
 beautifulsoup4  # Replaces `bs4`
-git+https://github.com/dokkumeme/dokkubot
+git+https://github.com/Joelkb/cinemagoer
 pytz
