--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ motor==2.5.1
 marshmallow==3.14.1
 umongo==3.0.1
 requests
+psutil
 beautifulsoup4  # Replaces `bs4`
 git+https://github.com/Joelkb/cinemagoer
 pytz
